refactor: optimize event listeners, add scheduled cleanup services, and update core repositories