@@ -2,7 +2,7 @@ package com.bookfair.backend.service;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
+import java.time.Instant;
 
 import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.stereotype.Service;
@@ -19,17 +19,12 @@ import com.bookfair.backend.exception.BusinessException;
 import com.bookfair.backend.exception.ErrorCode;
 import com.bookfair.backend.exception.ResourceNotFoundException;
 import com.bookfair.backend.model.Building;
-import com.bookfair.backend.model.EventStall;
-import com.bookfair.backend.model.EventStall.AvailabilityStatus;
-import com.bookfair.backend.model.Floor;
-import com.bookfair.backend.model.Hall;
-import com.bookfair.backend.model.Stall;
+import com.bookfair.backend.model.Event;
 import com.bookfair.backend.model.Venue;
 import com.bookfair.backend.repository.BuildingRepository;
-import com.bookfair.backend.repository.EventStallRepository;
+import com.bookfair.backend.repository.EventRepository;
+import com.bookfair.backend.repository.EventSpaceBookingRepository;
 import com.bookfair.backend.repository.FloorRepository;
-import com.bookfair.backend.repository.HallRepository;
-import com.bookfair.backend.repository.StallRepository;
 import com.bookfair.backend.repository.VenueRepository;
 import static java.util.Objects.requireNonNull;
 
@@ -42,9 +37,8 @@ public class BuildingService {
     private final BuildingRepository buildingRepository;
     private final VenueRepository venueRepository;
     private final FloorRepository floorRepository;
-    private final HallRepository hallRepository;
-    private final StallRepository stallRepository;
-    private final EventStallRepository eventStallRepository;
+    private final EventRepository eventRepository;
+    private final EventSpaceBookingRepository bookingRepository;
     private final BuildingMapper buildingMapper;
     private final FloorMapper floorMapper;
     private final ApplicationEventPublisher eventPublisher;
@@ -52,13 +46,17 @@ public class BuildingService {
     @Transactional
     public BuildingResponse createBuilding(CreateBuildingRequest request) {
         requireNonNull(request, "request cannot be null");
-        Venue venue = venueRepository.findById(requireNonNull(request.getVenueId()))
+        Venue venue = venueRepository.findById(requireNonNull(request.venueId()))
                 .orElseThrow(() -> new ResourceNotFoundException("Venue not found", ErrorCode.VENUE_NOT_FOUND));
+
+        if (!Boolean.TRUE.equals(venue.getActive())) {
+            throw new BusinessException("Cannot create a Building under an inactive Venue.", ErrorCode.BUSINESS_RULE_VIOLATION);
+        }
 
         Building building = buildingMapper.toBuildingFromCreateBuildingRequest(request);
         building.setVenue(venue);
         building.setActive(true);
-        building.setType(Building.BuildingType.valueOf(request.getType().toUpperCase()));
+        building.setType(request.type());
 
         Building saved = buildingRepository.save(building);
         return buildingMapper.toBuildingResponse(saved);
@@ -66,8 +64,8 @@ public class BuildingService {
 
     @Transactional(readOnly = true)
     public BuildingResponse getBuildingById(UUID id) {
-        Building building = buildingRepository.findById(requireNonNull(id))
-                .orElseThrow(() -> new ResourceNotFoundException("Building not found", ErrorCode.VENUE_NOT_FOUND));
+        Building building = buildingRepository.findByIdAndActiveTrue(requireNonNull(id))
+                .orElseThrow(() -> new ResourceNotFoundException("Building not found", ErrorCode.BUILDING_NOT_FOUND));
 
         return buildingMapper.toBuildingResponse(building);
     }
@@ -76,35 +74,30 @@ public class BuildingService {
     public BuildingResponse updateBuilding(UUID id, UpdateBuildingRequest request) {
         requireNonNull(request, "request cannot be null");
         Building building = buildingRepository.findById(requireNonNull(id))
-                .orElseThrow(() -> new ResourceNotFoundException("Building not found", ErrorCode.VENUE_NOT_FOUND));
+                .orElseThrow(() -> new ResourceNotFoundException("Building not found", ErrorCode.BUILDING_NOT_FOUND));
 
-        Venue venue = venueRepository.findById(requireNonNull(request.getVenueId()))
+        Venue venue = venueRepository.findById(requireNonNull(request.venueId()))
                 .orElseThrow(() -> new ResourceNotFoundException("Venue not found", ErrorCode.VENUE_NOT_FOUND));
 
+        if (!building.getVenue().getId().equals(venue.getId()) && !Boolean.TRUE.equals(venue.getActive())) {
+            throw new BusinessException("Cannot move Building to an inactive Venue.", ErrorCode.BUSINESS_RULE_VIOLATION);
+        }
+
         if (!building.getVenue().getId().equals(venue.getId())) {
-            List<Floor> floors = floorRepository.findByBuildingIdOrderByLevelNumberAsc(building.getId());
-            for (Floor floor : floors) {
-                List<Hall> halls = hallRepository.findByFloorIdAndActiveTrue(floor.getId());
-                for (Hall hall : halls) {
-                    List<Stall> stalls = stallRepository.findByHallIdAndActiveTrue(hall.getId());
-                    for (Stall stall : stalls) {
-                        List<EventStall> esList = eventStallRepository.findByStallIdAndActiveTrue(stall.getId());
-                        if (!esList.isEmpty()) {
-                            throw new BusinessException("Cannot move Building across Venues because stalls are assigned to Events in the original Venue.", ErrorCode.BUSINESS_RULE_VIOLATION);
-                        }
-                    }
-                }
+            long count = bookingRepository.countActiveByBuildingId(building.getId(), Instant.now());
+            if (count > 0) {
+                throw new BusinessException("Cannot move Building across Venues because stalls are assigned to Events in the original Venue.", ErrorCode.BUSINESS_RULE_VIOLATION);
             }
         }
 
         boolean oldActive = Boolean.TRUE.equals(building.getActive());
-        if (request.getActive() != null && !request.getActive() && oldActive) {
+        if (request.active() != null && !request.active() && oldActive) {
             validateNoActiveBookingsForBuilding(building.getId(), building.getName());
         }
 
         buildingMapper.updateBuildingFromBuildingRequest(request, building);
         building.setVenue(venue);
-        building.setType(Building.BuildingType.valueOf(request.getType().toUpperCase()));
+        building.setType(request.type());
 
         Building saved = buildingRepository.save(building);
 
@@ -118,7 +111,7 @@ public class BuildingService {
     @Transactional
     public void deleteBuilding(UUID id) {
         Building building = buildingRepository.findById(requireNonNull(id))
-                .orElseThrow(() -> new ResourceNotFoundException("Building not found", ErrorCode.VENUE_NOT_FOUND));
+                .orElseThrow(() -> new ResourceNotFoundException("Building not found", ErrorCode.BUILDING_NOT_FOUND));
 
         validateNoActiveBookingsForBuilding(building.getId(), building.getName());
 
@@ -128,31 +121,31 @@ public class BuildingService {
     }
 
     private void validateNoActiveBookingsForBuilding(UUID buildingId, String buildingName) {
-        List<Floor> floors = floorRepository.findByBuildingIdOrderByLevelNumberAsc(buildingId);
-        for (Floor floor : floors) {
-            List<Hall> halls = hallRepository.findByFloorIdAndActiveTrue(floor.getId());
-            for (Hall hall : halls) {
-                List<Stall> stalls = stallRepository.findByHallIdAndActiveTrue(hall.getId());
-                for (Stall stall : stalls) {
-                    List<EventStall> esList = eventStallRepository.findByStallIdAndActiveTrue(stall.getId());
-                    for (EventStall es : esList) {
-                        if (es.getStatus() == AvailabilityStatus.BOOKED || es.getStatus() == AvailabilityStatus.BLOCKED) {
-                            throw new BusinessException("Cannot deactivate Building " + buildingName + " because stall " + stall.getName() + " is currently booked or blocked in an event.", ErrorCode.BUSINESS_RULE_VIOLATION);
-                        }
-                    }
-                }
-            }
+        UUID venueId = buildingRepository.findVenueIdByBuildingId(buildingId)
+            .orElseThrow(() -> new ResourceNotFoundException("Building's venue not found", ErrorCode.VENUE_NOT_FOUND));
+
+        List<Event> upcoming = eventRepository
+            .findUpcomingOrOngoingEventsForVenue(venueId, Instant.now());
+
+        if (!upcoming.isEmpty()) {
+            Event next = upcoming.get(0);
+            throw new BusinessException(
+                "Cannot deactivate building '" + buildingName 
+                + "' — event '" + next.getName() 
+                + "' is scheduled at this venue until " 
+                + next.getEndDateTime() + ".", 
+                ErrorCode.BUSINESS_RULE_VIOLATION);
         }
     }
 
     @Transactional(readOnly = true)
     public List<FloorResponse> getFloorsByBuilding(UUID buildingId) {
         if (!buildingRepository.existsById(requireNonNull(buildingId))) {
-            throw new ResourceNotFoundException("Building not found", ErrorCode.VENUE_NOT_FOUND);
+            throw new ResourceNotFoundException("Building not found", ErrorCode.BUILDING_NOT_FOUND);
         }
 
         return floorRepository.findByBuildingIdOrderByLevelNumberAsc(buildingId).stream()
                 .map(floorMapper::toFloorResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
