@@ -2,7 +2,7 @@ package com.bookfair.backend.service;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
+import java.time.Instant;
 
 import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.stereotype.Service;
@@ -19,16 +19,13 @@ import com.bookfair.backend.exception.BusinessException;
 import com.bookfair.backend.exception.ErrorCode;
 import com.bookfair.backend.exception.ResourceNotFoundException;
 import com.bookfair.backend.model.Building;
-import com.bookfair.backend.model.EventStall;
-import com.bookfair.backend.model.EventStall.AvailabilityStatus;
 import com.bookfair.backend.model.Floor;
-import com.bookfair.backend.model.Hall;
-import com.bookfair.backend.model.Stall;
-import com.bookfair.backend.repository.BuildingRepository;
-import com.bookfair.backend.repository.EventStallRepository;
+import com.bookfair.backend.model.Event;
+import com.bookfair.backend.repository.EventRepository;
+import com.bookfair.backend.repository.EventSpaceBookingRepository;
 import com.bookfair.backend.repository.FloorRepository;
+import com.bookfair.backend.repository.BuildingRepository;
 import com.bookfair.backend.repository.HallRepository;
-import com.bookfair.backend.repository.StallRepository;
 import static java.util.Objects.requireNonNull;
 
 import lombok.RequiredArgsConstructor;
@@ -40,8 +37,8 @@ public class FloorService {
     private final FloorRepository floorRepository;
     private final BuildingRepository buildingRepository;
     private final HallRepository hallRepository;
-    private final StallRepository stallRepository;
-    private final EventStallRepository eventStallRepository;
+    private final EventRepository eventRepository;
+    private final EventSpaceBookingRepository bookingRepository;
     private final FloorMapper floorMapper;
     private final HallMapper hallMapper;
     private final ApplicationEventPublisher eventPublisher;
@@ -49,20 +46,24 @@ public class FloorService {
     @Transactional
     public FloorResponse createFloor(CreateFloorRequest request) {
         requireNonNull(request, "request cannot be null");
-        Building building = buildingRepository.findById(requireNonNull(request.getBuildingId()))
-                .orElseThrow(() -> new ResourceNotFoundException("Building not found", ErrorCode.VENUE_NOT_FOUND));
+        Building building = buildingRepository.findById(requireNonNull(request.buildingId()))
+                .orElseThrow(() -> new ResourceNotFoundException("Building not found", ErrorCode.BUILDING_NOT_FOUND));
+
+        if (!Boolean.TRUE.equals(building.getActive())) {
+            throw new BusinessException("Cannot create a Floor under an inactive Building.", ErrorCode.BUSINESS_RULE_VIOLATION);
+        }
 
         Floor floor = floorMapper.toFloor(request, building);
         floor.setActive(true);
 
-        Floor saved = floorRepository.save(requireNonNull(floor));
+        Floor saved = floorRepository.save(floor);
         return floorMapper.toFloorResponse(saved);
     }
 
     @Transactional(readOnly = true)
     public FloorResponse getFloorById(UUID id) {
-        Floor floor = floorRepository.findById(requireNonNull(id))
-                .orElseThrow(() -> new ResourceNotFoundException("Floor not found", ErrorCode.VENUE_NOT_FOUND));
+        Floor floor = floorRepository.findByIdAndActiveTrue(requireNonNull(id))
+                .orElseThrow(() -> new ResourceNotFoundException("Floor not found", ErrorCode.FLOOR_NOT_FOUND));
 
         return floorMapper.toFloorResponse(floor);
     }
@@ -71,32 +72,39 @@ public class FloorService {
     public FloorResponse updateFloor(UUID id, UpdateFloorRequest request) {
         requireNonNull(request, "request cannot be null");
         Floor floor = floorRepository.findById(requireNonNull(id))
-                .orElseThrow(() -> new ResourceNotFoundException("Floor not found", ErrorCode.VENUE_NOT_FOUND));
+                .orElseThrow(() -> new ResourceNotFoundException("Floor not found", ErrorCode.FLOOR_NOT_FOUND));
 
-        Building building = buildingRepository.findById(requireNonNull(request.getBuildingId()))
-                .orElseThrow(() -> new ResourceNotFoundException("Building not found", ErrorCode.VENUE_NOT_FOUND));
+        Building building = buildingRepository.findById(requireNonNull(request.buildingId()))
+                .orElseThrow(() -> new ResourceNotFoundException("Building not found", ErrorCode.BUILDING_NOT_FOUND));
+
+        if (!floor.getBuilding().getId().equals(building.getId()) && !Boolean.TRUE.equals(building.getActive())) {
+            throw new BusinessException("Cannot move Floor to an inactive Building.", ErrorCode.BUSINESS_RULE_VIOLATION);
+        }
 
         if (!floor.getBuilding().getId().equals(building.getId())) {
             UUID oldVenueId = floor.getBuilding().getVenue().getId();
             UUID newVenueId = building.getVenue().getId();
             if (!oldVenueId.equals(newVenueId)) {
-                List<Hall> halls = hallRepository.findByFloorIdAndActiveTrue(floor.getId());
-                for (Hall hall : halls) {
-                    List<Stall> stalls = stallRepository.findByHallIdAndActiveTrue(hall.getId());
-                    for (Stall stall : stalls) {
-                        List<EventStall> esList = eventStallRepository.findByStallIdAndActiveTrue(stall.getId());
-                        if (!esList.isEmpty()) {
-                            throw new BusinessException("Cannot move Floor across Venues because stalls are assigned to Events in the original Venue.", ErrorCode.BUSINESS_RULE_VIOLATION);
-                        }
-                    }
+                if (bookingRepository.countActiveByFloorId(floor.getId(), Instant.now()) > 0) {
+                    throw new BusinessException("Cannot move Floor across Venues because stalls are assigned to Events in the original Venue.", ErrorCode.BUSINESS_RULE_VIOLATION);
                 }
             }
         }
 
-        floorMapper.UpdateFloorFromFloorRequest(request, floor);
+        boolean oldActive = Boolean.TRUE.equals(floor.getActive());
+        if (request.active() != null && !request.active() && oldActive) {
+            validateNoActiveBookingsForFloor(floor.getId(), floor.getLevelName());
+        }
+
+        floorMapper.updateFloorFromFloorRequest(request, floor);
         floor.setBuilding(building);
 
         Floor saved = floorRepository.save(floor);
+        eventPublisher.publishEvent(new com.bookfair.backend.event.hierarchy.FloorUpdatedEvent(saved.getId()));
+
+        if (oldActive && !Boolean.TRUE.equals(saved.getActive())) {
+            eventPublisher.publishEvent(new FloorDeactivatedEvent(saved.getId()));
+        }
 
         return floorMapper.toFloorResponse(saved);
     }
@@ -104,7 +112,7 @@ public class FloorService {
     @Transactional
     public void deleteFloor(UUID id) {
         Floor floor = floorRepository.findById(requireNonNull(id))
-                .orElseThrow(() -> new ResourceNotFoundException("Floor not found", ErrorCode.VENUE_NOT_FOUND));
+                .orElseThrow(() -> new ResourceNotFoundException("Floor not found", ErrorCode.FLOOR_NOT_FOUND));
 
         validateNoActiveBookingsForFloor(floor.getId(), floor.getLevelName());
 
@@ -114,28 +122,31 @@ public class FloorService {
     }
 
     private void validateNoActiveBookingsForFloor(UUID floorId, String floorName) {
-        List<Hall> halls = hallRepository.findByFloorIdAndActiveTrue(floorId);
-        for (Hall hall : halls) {
-            List<Stall> stalls = stallRepository.findByHallIdAndActiveTrue(hall.getId());
-            for (Stall stall : stalls) {
-                List<EventStall> esList = eventStallRepository.findByStallIdAndActiveTrue(stall.getId());
-                for (EventStall es : esList) {
-                    if (es.getStatus() == AvailabilityStatus.BOOKED || es.getStatus() == AvailabilityStatus.BLOCKED) {
-                        throw new BusinessException("Cannot deactivate Floor " + floorName + " because stall " + stall.getName() + " is currently booked or blocked in an event.", ErrorCode.BUSINESS_RULE_VIOLATION);
-                    }
-                }
-            }
+        UUID venueId = floorRepository.findVenueIdByFloorId(floorId)
+            .orElseThrow(() -> new ResourceNotFoundException("Floor's venue not found", ErrorCode.VENUE_NOT_FOUND));
+
+        List<Event> upcoming = eventRepository
+            .findUpcomingOrOngoingEventsForVenue(venueId, Instant.now());
+
+        if (!upcoming.isEmpty()) {
+            Event next = upcoming.get(0);
+            throw new BusinessException(
+                "Cannot deactivate floor '" + floorName 
+                + "' — event '" + next.getName() 
+                + "' is scheduled at this venue until " 
+                + next.getEndDateTime() + ".", 
+                ErrorCode.BUSINESS_RULE_VIOLATION);
         }
     }
 
     @Transactional(readOnly = true)
     public List<HallResponse> getHallsByFloor(UUID floorId) {
-        if (!floorRepository.existsById(requireNonNull(floorId))) {
-            throw new ResourceNotFoundException("Floor not found", ErrorCode.VENUE_NOT_FOUND);
+        if (!floorRepository.existsByIdAndActiveTrue(requireNonNull(floorId))) {
+            throw new ResourceNotFoundException("Floor not found", ErrorCode.FLOOR_NOT_FOUND);
         }
 
         return hallRepository.findByFloorIdAndActiveTrue(floorId).stream()
                 .map(hallMapper::toHallResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
