@@ -3,6 +3,7 @@ package com.bookfair.backend.service;
 import java.util.List;
 import java.util.Objects;
 import java.util.UUID;
+import java.time.Instant;
 import java.util.stream.Collectors;
 
 import org.springframework.context.ApplicationEventPublisher;
@@ -15,7 +16,6 @@ import com.bookfair.backend.dto.hall.request.CreateHallRequest;
 import com.bookfair.backend.dto.hall.request.UpdateHallRequest;
 import com.bookfair.backend.dto.hall.response.HallLayoutResponse;
 import com.bookfair.backend.dto.hall.response.HallResponse;
-import com.bookfair.backend.dto.layout.request.GenerateStallGridRequest;
 import com.bookfair.backend.dto.stall.mapper.StallMapper;
 import com.bookfair.backend.dto.stall.response.StallResponse;
 import com.bookfair.backend.event.cache.HallUpdatedEvent;
@@ -24,13 +24,15 @@ import com.bookfair.backend.event.layout.HallDimensionsChangedEvent;
 import com.bookfair.backend.exception.BusinessException;
 import com.bookfair.backend.exception.ErrorCode;
 import com.bookfair.backend.exception.ResourceNotFoundException;
-import com.bookfair.backend.model.EventStall;
-import com.bookfair.backend.model.EventStall.AvailabilityStatus;
 import com.bookfair.backend.model.Floor;
 import com.bookfair.backend.model.Hall;
 import com.bookfair.backend.model.LayoutMarker;
 import com.bookfair.backend.model.LayoutPosition;
 import com.bookfair.backend.model.Stall;
+import com.bookfair.backend.model.Event;
+import com.bookfair.backend.model.enums.AvailabilityStatus;
+import com.bookfair.backend.repository.EventRepository;
+import com.bookfair.backend.repository.EventSpaceBookingRepository;
 import com.bookfair.backend.repository.EventStallRepository;
 import com.bookfair.backend.repository.FloorRepository;
 import com.bookfair.backend.repository.HallRepository;
@@ -47,24 +49,30 @@ public class HallService {
         private final HallRepository hallRepository;
         private final FloorRepository floorRepository;
         private final StallRepository stallRepository;
+        private final EventRepository eventRepository;
+        private final EventSpaceBookingRepository bookingRepository;
         private final EventStallRepository eventStallRepository;
         private final LayoutMarkerRepository layoutMarkerRepository;
         private final HallMapper hallMapper;
         private final StallMapper stallMapper;
-        private final LayoutGenerationService layoutGenerationService;
         private final CommonMapper commonMapper;
         private final ApplicationEventPublisher eventPublisher;
 
         @Transactional
         public HallResponse createHall(CreateHallRequest request) {
                 requireNonNull(request, "request cannot be null");
-                Floor floor = floorRepository.findById(requireNonNull(request.getFloorId()))
+                Floor floor = floorRepository.findById(requireNonNull(request.floorId()))
                                 .orElseThrow(() -> new ResourceNotFoundException("Floor not found",
-                                                ErrorCode.VENUE_NOT_FOUND));
+                                                ErrorCode.FLOOR_NOT_FOUND));
+
+                if (!Boolean.TRUE.equals(floor.getActive())) {
+                        throw new BusinessException("Cannot create a Hall under an inactive Floor.",
+                                        ErrorCode.BUSINESS_RULE_VIOLATION);
+                }
 
                 Hall hall = hallMapper.toHall(request, floor);
 
-                Hall saved = hallRepository.save(requireNonNull(hall));
+                Hall saved = hallRepository.save(hall);
                 return hallMapper.toHallResponse(saved);
         }
 
@@ -89,37 +97,43 @@ public class HallService {
         @Transactional
         public HallResponse updateHall(UUID id, UpdateHallRequest request) {
                 requireNonNull(request, "request cannot be null");
-                Hall hall = hallRepository.findById(requireNonNull(id))
+                // Lock the Hall row for the duration of this transaction so that a concurrent
+                // stall placement/grid generation on this Hall cannot interleave with a resize
+                // and produce stalls that end up outside the (possibly shrinking) bounds.
+                Hall hall = hallRepository.findByIdForUpdate(requireNonNull(id))
                                 .orElseThrow(() -> new ResourceNotFoundException("Hall not found",
                                                 ErrorCode.HALL_NOT_FOUND));
+
+                boolean wasInactive = !Boolean.TRUE.equals(hall.getActive());
 
                 Integer oldWidth = (hall.getLayout() != null) ? hall.getLayout().getWidth() : null;
                 Integer oldHeight = (hall.getLayout() != null) ? hall.getLayout().getHeight() : null;
 
-                Floor floor = floorRepository.findById(requireNonNull(request.getFloorId()))
+                Floor floor = floorRepository.findById(requireNonNull(request.floorId()))
                                 .orElseThrow(() -> new ResourceNotFoundException("Floor not found",
-                                                ErrorCode.VENUE_NOT_FOUND));
+                                                ErrorCode.FLOOR_NOT_FOUND));
+
+                if (!hall.getFloor().getId().equals(floor.getId()) && !Boolean.TRUE.equals(floor.getActive())) {
+                        throw new BusinessException("Cannot move Hall to an inactive Floor.",
+                                        ErrorCode.BUSINESS_RULE_VIOLATION);
+                }
 
                 if (!hall.getFloor().getId().equals(floor.getId())) {
                         UUID oldVenueId = hall.getFloor().getBuilding().getVenue().getId();
                         UUID newVenueId = floor.getBuilding().getVenue().getId();
                         if (!oldVenueId.equals(newVenueId)) {
-                                List<Stall> stalls = stallRepository.findByHallIdAndActiveTrue(hall.getId());
-                                for (Stall stall : stalls) {
-                                        List<EventStall> esList = eventStallRepository.findByStallIdAndActiveTrue(stall.getId());
-                                        if (!esList.isEmpty()) {
-                                                throw new BusinessException("Cannot move Hall across Venues because stalls are assigned to Events in the original Venue.",
-                                                                ErrorCode.BUSINESS_RULE_VIOLATION);
-                                        }
+                                if (bookingRepository.countActiveByHallId(hall.getId(), Instant.now()) > 0) {
+                                        throw new BusinessException("Cannot move Hall across Venues because stalls are assigned to Events in the original Venue.",
+                                                        ErrorCode.BUSINESS_RULE_VIOLATION);
                                 }
                         }
                 }
 
-                if (request.getActive() != null && !request.getActive() && Boolean.TRUE.equals(hall.getActive())) {
+                if (request.active() != null && !request.active() && Boolean.TRUE.equals(hall.getActive())) {
                         validateNoActiveBookingsForHall(hall.getId(), hall.getName());
                 }
 
-                LayoutPosition layout = commonMapper.toLayoutPosition(request.getLayout());
+                LayoutPosition layout = commonMapper.toLayoutPosition(request.layout());
                 Integer newWidth = (layout != null) ? layout.getWidth() : null;
                 Integer newHeight = (layout != null) ? layout.getHeight() : null;
 
@@ -130,7 +144,7 @@ public class HallService {
                                                 && stall.getLayout().getWidth() != null && stall.getLayout().getHeight() != null) {
                                         if (stall.getLayout().getXCoord() + stall.getLayout().getWidth() > newWidth
                                                         || stall.getLayout().getYCoord() + stall.getLayout().getHeight() > newHeight) {
-                                                throw new IllegalStateException("Cannot resize Hall: Stall " + stall.getName() + " would exceed new dimensions.");
+                                                throw new BusinessException("Cannot resize Hall: Stall " + stall.getName() + " would exceed new dimensions.", ErrorCode.BUSINESS_RULE_VIOLATION);
                                         }
                                 }
                         }
@@ -140,21 +154,21 @@ public class HallService {
                                                 && marker.getLayout().getWidth() != null && marker.getLayout().getHeight() != null) {
                                         if (marker.getLayout().getXCoord() + marker.getLayout().getWidth() > newWidth
                                                         || marker.getLayout().getYCoord() + marker.getLayout().getHeight() > newHeight) {
-                                                throw new IllegalStateException("Cannot resize Hall: LayoutMarker " + marker.getLabel() + " would exceed new dimensions.");
+                                                throw new BusinessException("Cannot resize Hall: LayoutMarker " + marker.getLabel() + " would exceed new dimensions.", ErrorCode.BUSINESS_RULE_VIOLATION);
                                         }
                                 }
                         }
                 }
 
-                hall.setName(request.getName());
-                hall.setSpaceCategory(request.getSpaceCategory());
-                hall.setHallType(request.getHallType());
-                hall.setBlueprintImageUrl(request.getBlueprintImageUrl());
-                hall.setSquareFootage(request.getSquareFootage());
-                hall.setMaxStalls(request.getMaxStalls());
-                hall.setWifiAvailable(request.getWifiAvailable());
-                hall.setAirConditioned(request.getAirConditioned());
-                hall.setActive(request.getActive());
+                hall.setName(request.name());
+                hall.setSpaceCategory(request.spaceCategory());
+                hall.setHallType(request.hallType());
+                hall.setBlueprintImageUrl(request.blueprintImageUrl());
+                hall.setSquareFootage(request.squareFootage());
+                hall.setMaxStalls(request.maxStalls());
+                hall.setWifiAvailable(request.wifiAvailable());
+                hall.setAirConditioned(request.airConditioned());
+                hall.setActive(request.active());
                 hall.setLayout(layout);
                 hall.setFloor(floor);
 
@@ -165,7 +179,26 @@ public class HallService {
                         eventPublisher.publishEvent(new HallDimensionsChangedEvent(saved.getId(), newWidth, newHeight));
                 }
 
+                // Deactivating a Hall cascades to deactivate its Stalls/EventStalls (HierarchyDeactivationListener).
+                // Without a symmetric reactivation path, a Hall flipped back to active would otherwise be left
+                // with zero usable stalls forever. Reactivate stalls that were never actually booked/blocked by
+                // a real reservation; leave anything with a genuine BOOKED/BLOCKED EventStall for manual review.
+                if (wasInactive && Boolean.TRUE.equals(saved.getActive())) {
+                        reactivateHallChildren(saved);
+                }
+
                 return hallMapper.toHallResponse(saved);
+        }
+
+        private void reactivateHallChildren(Hall hall) {
+                List<Stall> toReactivate = stallRepository.findByHallIdAndActiveFalse(hall.getId())
+                        .stream()
+                        .filter(s -> !eventStallRepository.existsByStallIdAndAvailabilityStatusIn(
+                                s.getId(), List.of(AvailabilityStatus.BOOKED, AvailabilityStatus.BLOCKED)))
+                        .peek(s -> s.setActive(true))
+                        .toList();
+
+                stallRepository.saveAll(toReactivate);
         }
 
         @Transactional
@@ -182,17 +215,22 @@ public class HallService {
         }
 
         private void validateNoActiveBookingsForHall(UUID hallId, String hallName) {
-                List<Stall> stalls = stallRepository.findByHallIdAndActiveTrue(hallId);
-                for (Stall stall : stalls) {
-                        List<EventStall> esList = eventStallRepository.findByStallIdAndActiveTrue(stall.getId());
-                        for (EventStall es : esList) {
-                                if (es.getStatus() == AvailabilityStatus.BOOKED || es.getStatus() == AvailabilityStatus.BLOCKED) {
-                                        throw new BusinessException("Cannot deactivate Hall " + hallName + " because stall " + stall.getName() + " is currently booked or blocked in an event.",
-                                                        ErrorCode.BUSINESS_RULE_VIOLATION);
-                                }
-                        }
-                }
+        UUID venueId = hallRepository.findVenueIdByHallId(hallId)
+            .orElseThrow(() -> new ResourceNotFoundException("Hall's venue not found", ErrorCode.VENUE_NOT_FOUND));
+
+        List<Event> upcoming = eventRepository
+            .findUpcomingOrOngoingEventsForVenue(venueId, Instant.now());
+
+        if (!upcoming.isEmpty()) {
+            Event next = upcoming.get(0);
+            throw new BusinessException(
+                "Cannot deactivate hall '" + hallName 
+                + "' — event '" + next.getName() 
+                + "' is scheduled at this venue until " 
+                + next.getEndDateTime() + ".", 
+                ErrorCode.BUSINESS_RULE_VIOLATION);
         }
+    }
 
         @Transactional(readOnly = true)
         public List<StallResponse> getStallsByHall(UUID hallId) {
@@ -202,23 +240,8 @@ public class HallService {
 
                 return stallRepository.findByHallIdAndActiveTrue(hallId).stream()
                                 .map(stallMapper::toStallResponse)
-                                .collect(Collectors.toList());
+                                .toList();
         }
 
-        @Transactional
-        public List<StallResponse> generateStallGrid(UUID hallId, GenerateStallGridRequest request) {
-                List<Stall> generatedStalls = layoutGenerationService.autoGenerateStallGrid(
-                                hallId,
-                                request.getRows(),
-                                request.getColumns(),
-                                request.getStallWidth(),
-                                request.getStallLength(),
-                                request.getAisleWidth(),
-                                request.getStartX(),
-                                request.getStartY());
 
-                return generatedStalls.stream()
-                                .map(stallMapper::toStallResponse)
-                                .collect(Collectors.toList());
-        }
 }
